--- a/Jobsheet3_VisiKomputer_Praktikum3.ipynb
+++ b/Jobsheet3_VisiKomputer_Praktikum3.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+H3BhJDTgLTNJt7ODo11o",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOPNce02ZwdabhMra30kn+R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -30,12 +32,408 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HagRFm9JkuKS"
+        "id": "HagRFm9JkuKS",
+        "outputId": "cb2a74b3-15f6-4834-b5cc-9184fe5e7d4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "     <input type=\"file\" id=\"files-0bb26d59-c60f-4364-9ba7-52d0c557c013\" name=\"files[]\" multiple disabled\n",
+              "        style=\"border:none\" />\n",
+              "     <output id=\"result-0bb26d59-c60f-4364-9ba7-52d0c557c013\">\n",
+              "      Upload widget is only available when the cell has been executed in the\n",
+              "      current browser session. Please rerun this cell to enable.\n",
+              "      </output>\n",
+              "      <script>// Copyright 2017 Google LLC\n",
+              "//\n",
+              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+              "// you may not use this file except in compliance with the License.\n",
+              "// You may obtain a copy of the License at\n",
+              "//\n",
+              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
+              "//\n",
+              "// Unless required by applicable law or agreed to in writing, software\n",
+              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+              "// See the License for the specific language governing permissions and\n",
+              "// limitations under the License.\n",
+              "\n",
+              "/**\n",
+              " * @fileoverview Helpers for google.colab Python module.\n",
+              " */\n",
+              "(function(scope) {\n",
+              "function span(text, styleAttributes = {}) {\n",
+              "  const element = document.createElement('span');\n",
+              "  element.textContent = text;\n",
+              "  for (const key of Object.keys(styleAttributes)) {\n",
+              "    element.style[key] = styleAttributes[key];\n",
+              "  }\n",
+              "  return element;\n",
+              "}\n",
+              "\n",
+              "// Max number of bytes which will be uploaded at a time.\n",
+              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
+              "\n",
+              "function _uploadFiles(inputId, outputId) {\n",
+              "  const steps = uploadFilesStep(inputId, outputId);\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  // Cache steps on the outputElement to make it available for the next call\n",
+              "  // to uploadFilesContinue from Python.\n",
+              "  outputElement.steps = steps;\n",
+              "\n",
+              "  return _uploadFilesContinue(outputId);\n",
+              "}\n",
+              "\n",
+              "// This is roughly an async generator (not supported in the browser yet),\n",
+              "// where there are multiple asynchronous steps and the Python side is going\n",
+              "// to poll for completion of each step.\n",
+              "// This uses a Promise to block the python side on completion of each step,\n",
+              "// then passes the result of the previous step as the input to the next step.\n",
+              "function _uploadFilesContinue(outputId) {\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  const steps = outputElement.steps;\n",
+              "\n",
+              "  const next = steps.next(outputElement.lastPromiseValue);\n",
+              "  return Promise.resolve(next.value.promise).then((value) => {\n",
+              "    // Cache the last promise value to make it available to the next\n",
+              "    // step of the generator.\n",
+              "    outputElement.lastPromiseValue = value;\n",
+              "    return next.value.response;\n",
+              "  });\n",
+              "}\n",
+              "\n",
+              "/**\n",
+              " * Generator function which is called between each async step of the upload\n",
+              " * process.\n",
+              " * @param {string} inputId Element ID of the input file picker element.\n",
+              " * @param {string} outputId Element ID of the output display.\n",
+              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
+              " */\n",
+              "function* uploadFilesStep(inputId, outputId) {\n",
+              "  const inputElement = document.getElementById(inputId);\n",
+              "  inputElement.disabled = false;\n",
+              "\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  outputElement.innerHTML = '';\n",
+              "\n",
+              "  const pickedPromise = new Promise((resolve) => {\n",
+              "    inputElement.addEventListener('change', (e) => {\n",
+              "      resolve(e.target.files);\n",
+              "    });\n",
+              "  });\n",
+              "\n",
+              "  const cancel = document.createElement('button');\n",
+              "  inputElement.parentElement.appendChild(cancel);\n",
+              "  cancel.textContent = 'Cancel upload';\n",
+              "  const cancelPromise = new Promise((resolve) => {\n",
+              "    cancel.onclick = () => {\n",
+              "      resolve(null);\n",
+              "    };\n",
+              "  });\n",
+              "\n",
+              "  // Wait for the user to pick the files.\n",
+              "  const files = yield {\n",
+              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
+              "    response: {\n",
+              "      action: 'starting',\n",
+              "    }\n",
+              "  };\n",
+              "\n",
+              "  cancel.remove();\n",
+              "\n",
+              "  // Disable the input element since further picks are not allowed.\n",
+              "  inputElement.disabled = true;\n",
+              "\n",
+              "  if (!files) {\n",
+              "    return {\n",
+              "      response: {\n",
+              "        action: 'complete',\n",
+              "      }\n",
+              "    };\n",
+              "  }\n",
+              "\n",
+              "  for (const file of files) {\n",
+              "    const li = document.createElement('li');\n",
+              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
+              "    li.append(span(\n",
+              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
+              "        `last modified: ${\n",
+              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
+              "                                    'n/a'} - `));\n",
+              "    const percent = span('0% done');\n",
+              "    li.appendChild(percent);\n",
+              "\n",
+              "    outputElement.appendChild(li);\n",
+              "\n",
+              "    const fileDataPromise = new Promise((resolve) => {\n",
+              "      const reader = new FileReader();\n",
+              "      reader.onload = (e) => {\n",
+              "        resolve(e.target.result);\n",
+              "      };\n",
+              "      reader.readAsArrayBuffer(file);\n",
+              "    });\n",
+              "    // Wait for the data to be ready.\n",
+              "    let fileData = yield {\n",
+              "      promise: fileDataPromise,\n",
+              "      response: {\n",
+              "        action: 'continue',\n",
+              "      }\n",
+              "    };\n",
+              "\n",
+              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
+              "    let position = 0;\n",
+              "    do {\n",
+              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
+              "      const chunk = new Uint8Array(fileData, position, length);\n",
+              "      position += length;\n",
+              "\n",
+              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
+              "      yield {\n",
+              "        response: {\n",
+              "          action: 'append',\n",
+              "          file: file.name,\n",
+              "          data: base64,\n",
+              "        },\n",
+              "      };\n",
+              "\n",
+              "      let percentDone = fileData.byteLength === 0 ?\n",
+              "          100 :\n",
+              "          Math.round((position / fileData.byteLength) * 100);\n",
+              "      percent.textContent = `${percentDone}% done`;\n",
+              "\n",
+              "    } while (position < fileData.byteLength);\n",
+              "  }\n",
+              "\n",
+              "  // All done.\n",
+              "  yield {\n",
+              "    response: {\n",
+              "      action: 'complete',\n",
+              "    }\n",
+              "  };\n",
+              "}\n",
+              "\n",
+              "scope.google = scope.google || {};\n",
+              "scope.google.colab = scope.google.colab || {};\n",
+              "scope.google.colab._files = {\n",
+              "  _uploadFiles,\n",
+              "  _uploadFilesContinue,\n",
+              "};\n",
+              "})(self);\n",
+              "</script> "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
-        "#Praktikum 3"
+        "#Praktikum 3\n",
+        "from google.colab import files\n",
+        "files.upload()\n",
+        "import os, shutil\n",
+        "if os.path.exists(\"kaggle.json\"):\n",
+        "  os.makedirs(os.path.expanduser(\"~/.kaggle\"), exist_ok=True)\n",
+        "  shutil.copy(\"kaggle.json\",os.path.expanduser(\"~/.kaggle/kaggle.json\"))\n",
+        "  os.chmod(os.path.expanduser(\"~/.kaggle/kaggle.json\"), 0o600)\n",
+        "  !pip -q install kaggle\n",
+        "  print(\"Kaggle API  siap digunakan\")\n",
+        "else:\n",
+        "  print(\"Kaggle.json belum ditemukan. Upload terlebih dahulu\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Langkah 2\n",
+        "!kaggle competitions download -c petfinder-pawpularity-score -p /content -q\n",
+        "!unzip -q /content/petfinder-pawpularity-score.zip -d /content/paw\n",
+        "print(\"Datasheet Pawpularity berhasil diekstrak\")"
+      ],
+      "metadata": {
+        "id": "5OtkbrCeYmpw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Langkah 3\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "from PIL import Image\n",
+        "\n",
+        "df = pd.read_csv('/content/paw/train.csv')\n",
+        "df['path'] =  df['Id'].apply(lambda x: f\"/content/paw/train/{x}.jpg\")\n",
+        "print(df.head())\n",
+        "\n",
+        "plt.figure(figsize=(12,6))\n",
+        "for i,row in enumerate(df.sample(12, random_state=42).itertuples()):\n",
+        "  img = Image.open(row.path)\n",
+        "  plt.subplot(3,4, i + 1)\n",
+        "  plt.imshow(img)\n",
+        "  plt.title(f\"Pawpularity: {row.Pawpularity}\")\n",
+        "  plt.axis(\"off\")\n",
+        "plt.suptitle(\"Contoh Data PetFinder.my Pawpularity\", fontsize=14)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "U2ZonYVCZGkm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Langkah 4\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "IMG_SIZE = 224\n",
+        "train_df, val_df = train_test_split(df, test_size = 0.2, random_state = 42)\n",
+        "\n",
+        "def load_image(path, label):\n",
+        "  img = tf.io.read_file(path)\n",
+        "  img = tf.image.decode_jpeg(img, channels=3)\n",
+        "  img = tf.image.resize(img, (IMG_SIZE, IMG_SIZE))\n",
+        "  img = tf.cast(img, tf.float32) /255.0\n",
+        "  return img, tf.cast(label, tf.float32)\n",
+        "\n",
+        "train_ds = tf.data.Dataset.from_tensor_slices((train_df['path'],train_df['Pawpularity']))\\\n",
+        ".map(load_image, num_parallel_calls=tf.data.AUTOTUNE)\\\n",
+        ".shuffle(4096).batch(64).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "val_ds  = tf.data.Dataset.from_tensor_slices((val_df['path'],val_df['Pawpularity']))\\\n",
+        ".map(load_image, num_parallel_calls=tf.data.AUTOTUNE)\\\n",
+        ".batch(64).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "print(f\"Dataset siap  digunakan - {len(train_df)} untuk training {len(val_df)} untuk validasi\")\n"
+      ],
+      "metadata": {
+        "id": "JYIDH_LzePfO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Langkah 5\n",
+        "from tensorflow.keras import layers, models\n",
+        "\n",
+        "base = tf.keras.applications.EfficientNetB0(\n",
+        "    include_top=False,\n",
+        "    input_shape=(IMG_SIZE, IMG_SIZE,3),\n",
+        "    weights='imagenet'\n",
+        ")\n",
+        "\n",
+        "base.trainable = False\n",
+        "\n",
+        "inputs = tf.keras.Input((IMG_SIZE, IMG_SIZE, 3))\n",
+        "x = tf.keras.applications.efficientnet.preprocess_input(inputs * 255.0)\n",
+        "x = base(x, training=False)\n",
+        "x = layers.GlobalAveragePooling2D()(x)\n",
+        "x = layers.Dropout(0.3)(x)\n",
+        "x = layers.Dense(256, activation='relu')(x)\n",
+        "outputs = layers.Dense(1)(x)\n",
+        "\n",
+        "model = tf.keras.Model(inputs, outputs)\n",
+        "model.compile(optimizer='adam',loss='mse', metrics=['mae'])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "xoEUdomFmTYI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Langkah 6\n",
+        "cb = [tf.keras.callbacks.EarlyStopping(patience=3,restore_best_weights=True),tf.keras.callbacks.ReduceLROnPlateau(patience=2, factor=0.5)]\n",
+        "\n",
+        "history = model.fit(train_ds, validation_data=val_ds, epochs=10,callbacks=cb, verbose=1)"
+      ],
+      "metadata": {
+        "id": "P4ZpF5Lvplec"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Langkah 7\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.figure(figsize=(8,4))\n",
+        "plt.subplot(1,2,1)\n",
+        "plt.plot(history.history['loss'], label='Train')\n",
+        "plt.plot(history.history['val_loss'], label='Validation')\n",
+        "plt.title(\"Training vs Validation Loss (MSE)\")\n",
+        "plt.xlabel(\"Epoch\");plt.ylabel(\"Loss\");plt.legend()\n",
+        "\n",
+        "plt.subplot(1,2,2)\n",
+        "plt.plot(history.history['mae'], label='Train')\n",
+        "plt.plot(history.history['val_mae'], label='Validation')\n",
+        "plt.title(\"Training vs Validation MAE\")\n",
+        "plt.xlabel(\"Epoch\");plt.ylabel(\"MAE\");plt.legend()\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "oj27nW_CqR97"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Langkah 8\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import mean_absolute_error, r2_score\n",
+        "from math import sqrt\n",
+        "\n",
+        "y_true = val_df['Pawpularity'].values.astype(np.float32)\n",
+        "y_pred = np.concatenate([model.predict(batch[0], verbose=0).ravel() for batch in val_ds])\n",
+        "\n",
+        "mae = mean_absolute_error(y_true, y_pred)\n",
+        "rmse = sqrt(np.mean((y_true - y_pred)**2))\n",
+        "r2 = r2_score(y_true, y_pred)\n",
+        "\n",
+        "print(f\"MAE = {mae:.2f}\")\n",
+        "print(f\"RMSE = {rmse:.2f}\")\n",
+        "print(f\"R2 = {r2:.3f}\")\n",
+        "\n",
+        "plt.figure(figsize=(5,5))\n",
+        "plt.scatter(y_true, y_pred, s=10, alpha=0.5)\n",
+        "lims = [min(y_true.min(), y_pred.min()), max(y_true.max(), y_pred.max())]\n",
+        "plt.plot(lims, lims, '--', color='red')\n",
+        "plt.xlabel(\"True Pawpularity\")\n",
+        "plt.ylabel(\"Predicted Pawpularity\")\n",
+        "plt.title(\"True vs Predicted Pawpularity\")\n",
+        "plt.grid(True, linestyle='--', alpha=0.4)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "WxtaKWMfu0Bc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
