--- a/Jobsheet03_VisiKomputer_Praktikum2-Copy.ipynb
+++ b/Jobsheet03_VisiKomputer_Praktikum2-Copy.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "2GXggsAXlKuo",
         "colab": {
@@ -277,7 +277,7 @@
         "id": "W4SpWtbwnQck",
         "outputId": "74339fad-bc1b-4661-dc75-90693c949f23"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "id": "4UGNmRkUpFQ-",
         "outputId": "264c4bf2-894f-4b35-ae9a-f19377b8eb5d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
         "id": "FKfhiUqzp_Qo",
         "outputId": "92ceea36-d0b9-43f8-ac85-5a4d5fcb68b0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
         "id": "ByFMegEdtpav",
         "outputId": "67951a5d-2470-47f5-eb44-a4cad72a8876"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +449,7 @@
         "id": "PnlB8_JexCvI",
         "outputId": "051598e5-bda7-44a3-bdb5-ac1a5e862763"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
         "id": "y2QKVMRr1f0M",
         "outputId": "0984bbd8-f928-4077-b77a-20ea6afa8ff8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +683,7 @@
           "height": 666
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,7 +746,7 @@
           "height": 539
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +798,7 @@
           "height": 610
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,7 +815,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# Penugasan\n",
         "from google.colab import files\n",
         "uploaded = files.upload()\n",
         "\n",
@@ -851,7 +851,7 @@
           "height": 536
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1075,7 +1075,7 @@
       "metadata": {
         "id": "3Au_H936tLpT"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ]
